--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ns-login-monitor",
-  "version": "0.0.2-beta.2",
+  "version": "0.0.0-beta.0",
   "description": "",
   "main": "dist/boot.js",
   "types": "dist/dist/index.d.ts",
@@ -21,12 +21,14 @@
     "figlet": "^1.2.0",
     "inquirer": "^5.2.0",
     "rxjs": "^5.5.10",
-    "webpack-merge": "^4.1.2"
+    "webpack-merge": "^4.1.2",
+    "websocket": "^1.0.25"
   },
   "author": "WeakenedPlayer",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^9.6.5",
+    "@types/websocket": "0.0.38",
     "imports-loader": "^0.8.0",
     "nexe": "^2.0.0-rc.26",
     "ts-loader": "^4.2.0",
