--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ns-login-monitor",
-  "version": "0.0.0-beta.0",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/boot.js",
   "types": "dist/dist/index.d.ts",
